[gd_scene load_steps=2 format=3 uid="uid://d2c0cf0df0gjd"]

[ext_resource type="Script" uid="uid://bkj525m7jwldt" path="res://Scripts/In-Out Warnings/fish_warning.gd" id="1_eb1hv"]

[node name="FishWarning" type="Node2D"]
script = ExtResource("1_eb1hv")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="FishColor" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="VisualTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WarningTimer" to="." method="_on_warning_timer_timeout"]
[connection signal="timeout" from="VisualTimer" to="." method="_on_visual_timer_timeout"]
